prometheus-grafana/deploy/prometheus/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
    - host: "prometheus.stack.ku"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: stable-prometheus-stack-ku-prometheus
                port:
                  number: 9090
